--- a/LMS/Views/Courses/Details.cshtml
+++ b/LMS/Views/Courses/Details.cshtml
@@ -42,7 +42,7 @@
          <div class="pt-3">
          <link rel="stylesheet"
            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-          <button class="btn btn-outline-primary "> 
+          <button class="btn btn-outline-success "> 
              <a asp-controller="Courses" asp-action="IndexTeacher">Back to teacher <i class="fa fa-reply"></i> </a>
             </button>
   </div>
