--- a/LMS/Views/Courses/IndexTeacher.cshtml
+++ b/LMS/Views/Courses/IndexTeacher.cshtml
@@ -18,7 +18,7 @@
     </h4>
 </div>
 
-<div class="pt-3">
+<div class=" TeacherBackgroundPhoto pt-3">
 <nav class="nt">
   <div class="nav nav-tabs " id="nav-tab" role="tablist">
 
