--- a/LMS/Views/Activities/Edit.cshtml
+++ b/LMS/Views/Activities/Edit.cshtml
@@ -3,12 +3,17 @@
 @{
     ViewData["Title"] = "Edit";
 }
+<section class="backgroundphoto">
+<div class="container1 inline-block">
 
+<h1 style="color: #293a7d;">Edit this activity </h1>
 <hr />
 
+
+<div class="col-md-12">
 <form asp-action="Edit">
-<div class="row">
-        <div class="col-6">
+
+        <div>
             <div asp-validation-summary="ModelOnly" class="text-danger">
 
             </div>
@@ -38,25 +43,27 @@
                 <label asp-for="EndDate" class="control-label"></label>
                 <input asp-for="EndDate" class="form-control" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
-            </div> 
-            <div class="pt-5">
-                 <a asp-controller="Courses" asp-action="Details" asp-route-id="@Model.ForwardCourseId">Back to Modules and ativities</a>
             </div>
-        </div>
-         <div class="col-6">
-            <div class="form-group">
-                <div class="pb-3 text-center">
+            
+            <div class="pb-3 text-center">
                 <h4>Document</h4>
             </div>
             <div class="row p-3  float-End">
                    <input class="form-control" type="file" id="formFile">
-            </div>         
+            </div>  
+            <br />
+             <div class="form-group">
+           
+                <input type="submit" value="Save" class="btn btn-success" />|
+                <button class="btn btn-outline-success "> <a asp-controller="Courses" asp-action="Details" asp-route-id="@Model.ForwardCourseId">Back to modules and ativities</a></button>
+           
+            </div>
         </div>
-    </div>
+        
         </form>
     </div>
-
-
+    </div>
+    </section>
 
 
 @section Scripts {
