--- a/LMS/Views/Users/Delete.cshtml
+++ b/LMS/Views/Users/Delete.cshtml
@@ -4,50 +4,50 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<section class="backgroundphoto">
+<div class="container1 inline-block">
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>User</h4>
+<h3 style="color: #293a7d;">Are you sure you want to delete this user?</h3>
+<div class="col-lg-12">
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
+        </dt><span>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FirstName)
-        </dd>
+        </dd></span>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.LastName)
-        </dt>
+        </dt><span>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.LastName)
-        </dd>
+        </dd></span>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Course)
-        </dt>
+        </dt><span>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Course.Description)
-        </dd>
-        <dt class = "col-sm-2">
+        </dd></span>
+       @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.UserName)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.UserName)
-        </dd>
-        <dt class = "col-sm-2">
+        </dd>*@
+       @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.NormalizedUserName)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NormalizedUserName)
-        </dd>
+        </dd>*@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
-        </dt>
+        </dt><span>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
+        </dd></span>
+       @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.NormalizedEmail)
         </dt>
         <dd class = "col-sm-10">
@@ -76,14 +76,14 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ConcurrencyStamp)
-        </dd>
+        </dd>*@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PhoneNumber)
-        </dt>
+        </dt><span>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PhoneNumber)
-        </dd>
-        <dt class = "col-sm-2">
+        </dd></span>
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
         </dt>
         <dd class = "col-sm-10">
@@ -112,12 +112,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.AccessFailedCount)
-        </dd>
+        </dd>*@
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <button class="btn btn-outline-danger "><a asp-action="Index">Back to List</a></button>
     </form>
 </div>
