--- a/LMS/Views/Users/Edit.cshtml
+++ b/LMS/Views/Users/Edit.cshtml
@@ -1,12 +1,13 @@
 ﻿@model LMS.Core.Entities.User
 
 
-<h1>Edit</h1>
+<section class="backgroundphoto">
+<div class="container1 inline-block">
 
-<h4>User</h4>
+<h1 style="color: #293a7d;">Edit this user </h1>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="col-md-12">
+    <div >
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -97,15 +98,14 @@
             </div>*@
             <br />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-success"/>
+                <button  class="btn btn-outline-success "> <a asp-controller="Courses" asp-action="IndexTeacher">Back to List</a></button>
             </div>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-controller="Courses" asp-action="IndexTeacher">Back to List</a>
 </div>
+</section>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
