--- a/LMS/Views/Courses/_Index_Partial_Student.cshtml
+++ b/LMS/Views/Courses/_Index_Partial_Student.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<LMS.Core.Entities.User>
 <div class="row pt-3">
     <div class="col float-start">
-        <a class="btn btn-success" asp-controller="User" asp-action="Create">New teacher <i class="fa fa-plus-circle"></i></a> 
+        <a class="btn btn-success" asp-controller="Users" asp-action="CreateMyStudent">New student <i class="fa fa-plus-circle"></i></a> 
      </div>
  </div>
 
