--- a/LMS/Views/Users/Details.cshtml
+++ b/LMS/Views/Users/Details.cshtml
@@ -115,7 +115,7 @@
         <BR />
         <div>
    <button class="btn btn-outline-success text-white"><a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a></button>   |
-    <button  class="btn btn-outline-success "><a asp-action="Index">Back to List</a></button>
+    <button  class="btn btn-outline-success "><a asp-controller="Courses" asp-action="IndexTeacher">Back to List</a></button>
 </div>
 
 
