--- a/LMS/Views/Users/Create.cshtml
+++ b/LMS/Views/Users/Create.cshtml
@@ -104,7 +104,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Courses" asp-action="IndexTeacher">Back to List</a>
 </div>
 
 @section Scripts {
