--- a/LMS/Views/Courses/_Index_Partial_Course.cshtml
+++ b/LMS/Views/Courses/_Index_Partial_Course.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<LMS.Core.Entities.Course>
 <div class="row pt-3">
     <div class="col float-start">
-        <a class="btn btn-success m-0 justify-content-center " asp-controller="Courses" asp-action="Create">New Course <i class="fa fa-plus-circle"></i></a> 
+        <a class="btn btn-primary" asp-controller="Courses" asp-action="Create">New Course</a> 
      </div>
  </div>
  
