--- a/LMS/Views/Modules/Edit.cshtml
+++ b/LMS/Views/Modules/Edit.cshtml
@@ -10,15 +10,15 @@
 <h1 style="color: #293a7d;">Edit this module </h1>
 
 <hr />
-
-<div class="col-md-12">
-<form asp-controller="Modulles" asp-action="Edit">
-<div >
-    <div >
+<form asp-controller="Modules" asp-action="Edit">
+<div class="row">
+    <div class="col-md-4">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="ForwardCourseId" />
-         
+            <div class="pb-3 text-center">
+                  <h4>Module</h4>
+            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="@Model.Name" class="form-control" />
