--- a/LMS/Views/Modules/Edit.cshtml
+++ b/LMS/Views/Modules/Edit.cshtml
@@ -12,7 +12,7 @@
 <hr />
 
 <div class="col-md-12">
-<form asp-controller="Modulles" asp-action="Edit">
+<form asp-controller="Modules" asp-action="Edit">
 <div >
     <div >
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -50,6 +50,9 @@
             <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-success" />|
+               
+
+
                  <button class="btn btn-outline-success "><a asp-controller="Courses" asp-action="Details" asp-route-id="@Model.CourseId">Back to Modules and ativities</a>
                 </button>
 
