--- a/LMS/Views/Modules/Edit.cshtml
+++ b/LMS/Views/Modules/Edit.cshtml
@@ -12,7 +12,7 @@
 <hr />
 
 <div class="col-md-12">
-<form asp-controller="Modulles" asp-action="Edit">
+<form asp-controller="Modules" asp-action="Edit">
 <div >
     <div >
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
